# matmul

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
src/: matmul.cpp  matmul.cu  matmul.hpp
